# itm-rs

./: .gitattributes  CITATION.cff  CONTRIBUTING.md  C_API_USAGE.md  Cargo.toml  LICENSE  README.md  deny.toml  itm.h
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml  validation.yml
src/: ffi.rs  lib.rs  main.rs
src/math/: README.md  constants.rs  diffraction.rs  height_gain.rs  itm.rs  longley_rice.rs  mod.rs  propagation.rs  scatter.rs  statistics.rs  terrain.rs  variability.rs
tests/: README.md  ntia_validation.rs
tests/fixtures/: pfl.txt
